objects/SLSC_Mulesoft_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Endpoint_Title__c</fullName>
        <label>Endpoint Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investor Account</fullName>
                    <default>true</default>
                    <label>Investor Account</label>
                </value>
                <value>
                    <fullName>Investor BankDetails</fullName>
                </value>
                <value>
                    <fullName>Investor OnlineDetails</fullName>
                </value>
                <value>
                    <fullName>Investor SSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mulesoft_ApiName__c</fullName>
        <label>Mulesoft ApiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asdasd__c</fullName>
        <label>asd</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Mulesoft_Field_Mappings</relationshipLabel>
        <relationshipName>Mulesoft_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Mulesoft Field Mapping</label>
    <pluralLabel>Mulesoft Field Mappings</pluralLabel>
</CustomObject>